--- a/_scss/component/_post.scss
+++ b/_scss/component/_post.scss
@@ -8,18 +8,21 @@
   @media (min-width: 10px) {
     font-size: 1.0rem;
 
-    h1 { font-size: 1.6rem; }
+    h1 {
+      margin: 1em 0 0.5em 0;
+      font-size: 2.5rem;
+    }
     h2 {
       margin: 2em 0 1em 0;
-      font-size: 1.3rem;
+      font-size: 1.6rem;
     }
 
     h3, h4, h5, h6 {
       margin: 2em 0 1em 0;
-      font-size: 1.1rem;
+      font-size: 1.3rem;
     }
     h3 {
-      font-size: 1.3rem;
+      font-size: 1.5rem;
     }
   }
 
